# propagate

./: .gitignore  Docs.md  GUIDE.md  LICENSE  MANIFEST.in  README.md  Source.md  TODO  TODO.md  attempt_lora.py  dataloader_test.py  eval_aime.py  eval_aime_comparison.py  plot.ipynb  pyproject.toml  quick_start.py  run_job.sbatch  scratch_shapes.py  test.py  test2.py  test_lora.py  train.py
docs/: replication_writeup.md
examples/: demo_countdown.py  demo_countdown_lora.py  optuna_basic.py  optuna_flow_ppo.py  optuna_flow_reinforce.py  optuna_flow_rwr.py  optuna_flow_xnes.py  optuna_optimizers.py  optuna_sweeper.py  optuna_wd.py  quick_start.py  test_optimizer.py  try_optimizer.py
libs/: backend.py  countdown_dataset.py  dataset.py  generic_rewards.py  genome.py  load_countdown_dataset.py  optimizer_stein.py  optimizer_th.py  optimizers.py  optimizers_th.py  oreal_math_dataset.py  testing_scripts.py  trainer.py  vllm_backend.py  vllm_backend_cpu_tp.py  vllm_backend_lora.py  vllm_backend_multi.py  vllm_backend_multi2.py  vllm_backend_multi_redo.py  vllm_backend_tp.py  vllm_backend_utils.py  vllm_genome_utils.py  vllm_source.py  vllm_utils.py
libs/backend/: backend_abc.py  exp_dp_1.py  exp_dp_2.py  vllm_backend.py  vllm_exp_lorautils.py  vllm_lorabackend.py  (+7 more)
saved_model/: saved_model_seeds.json
tests/: conftest.py  test_chains_basic.py  test_chains_complex.py  test_convergence.py  test_dataset_core.py  test_dataset_postprocess.py  test_dataset_rewards.py  test_distributed_sync.py  test_genome.py  test_import.py  test_optimizer_core.py  test_psamplers.py
(+40 files in other folders)
